Added support for image sizes